' Generated by UML Generator
' Encoded: pLJ1Qjmm4BtxAtHqkjcGKm-c3GbieGlTDB2XBPHIPkN9PeWj6KbUIjFyUpMM9Nlj57B8eHSZlz6RcVT6qgLrO5nRLvbz8DM0WLh82gozSixGhdMubbfjwJUAy-oUIXIIZAmmoxfTuYkGC-WNZvaGomQKX0Vyg5kB6rHj8VZBaP8KccDewJ-BoC-VfvwA2V64IOqXvVWlFod4GLFPrKuWEJJWj2d4kb-zOzp_r1UHy1G5h6B-eE3H--58FedDrRUVwziFcsqXV5xnNhpbi6hh7PhFTvpBniWvH-g-WWrzyZA9J3NohdqeImxd2ceinDRxhFPUA5ffg76arG0US8z-G0GUssbT8QXJuPLAJonrkwjmS60X3OAVLw-PlPdhP-6-QpHt854atI_c1jCY53mRw-XcFLV2y3DQ-haDQf9biS8hcSGf_QPhduorfQOON0qvZsDalwJC71cQPjeD5s2uxpoPSpCvoS6aqVduHDQDN8sIfxp_ux0C0xz5wrQ63XXEJBefDP3AmUnjxEJxZt_VibWac4Bp2zDeIq7Mw78TtwBKz8Jkw_A-Ux3N-CjD9gPwQ5HhOR3M1yn7tQRdxCro6HwguNquE_jpCSNYjYxZRF03OnRIO-BSdQEybwXA_qB_1G
' URL: http://www.plantuml.com/plantuml/uml/pLJ1Qjmm4BtxAtHqkjcGKm-c3GbieGlTDB2XBPHIPkN9PeWj6KbUIjFyUpMM9Nlj57B8eHSZlz6RcVT6qgLrO5nRLvbz8DM0WLh82gozSixGhdMubbfjwJUAy-oUIXIIZAmmoxfTuYkGC-WNZvaGomQKX0Vyg5kB6rHj8VZBaP8KccDewJ-BoC-VfvwA2V64IOqXvVWlFod4GLFPrKuWEJJWj2d4kb-zOzp_r1UHy1G5h6B-eE3H--58FedDrRUVwziFcsqXV5xnNhpbi6hh7PhFTvpBniWvH-g-WWrzyZA9J3NohdqeImxd2ceinDRxhFPUA5ffg76arG0US8z-G0GUssbT8QXJuPLAJonrkwjmS60X3OAVLw-PlPdhP-6-QpHt854atI_c1jCY53mRw-XcFLV2y3DQ-haDQf9biS8hcSGf_QPhduorfQOON0qvZsDalwJC71cQPjeD5s2uxpoPSpCvoS6aqVduHDQDN8sIfxp_ux0C0xz5wrQ63XXEJBefDP3AmUnjxEJxZt_VibWac4Bp2zDeIq7Mw78TtwBKz8Jkw_A-Ux3N-CjD9gPwQ5HhOR3M1yn7tQRdxCro6HwguNquE_jpCSNYjYxZRF03OnRIO-BSdQEybwXA_qB_1G
' Generated on: 2025-12-17T00:08:32.571909

@startuml
skinparam classAttributeIconSize 0
hide circle

class Waitress {
  -pancakeHouseMenu: Menu
  -dinerMenu: Menu
  --
  +Waitress(pancakeHouseMenu: Menu, dinerMenu: Menu)
  +printMenu(): void
  -printMenu(iterator: Iterator<MenuItem>): void
}

class DinerMenu {
  -{static} MAX_ITEMS: int = 6
  -numberOfItems: int = 0
  -menuItems: MenuItem
  --
  +DinerMenu()
  +addItem(name: String, description: String, vegetarian: boolean, price: double): void
  +createIterator(): Iterator<MenuItem>
}

interface Menu {
  +createIterator(): Iterator<MenuItem>
}

class MenuItem {
  -name: String
  -description: String
  -vegetarian: boolean
  -price: double
  --
  +MenuItem(name: String, description: String, vegetarian: boolean, price: double)
  +getName(): String
  +getDescription(): String
  +isVegetarian(): boolean
  +getPrice(): double
}

class PancakeHouseMenu {
  -menuItems: List<MenuItem>
  --
  +PancakeHouseMenu()
  +addItem(name: String, description: String, vegetarian: boolean, price: double): void
  +createIterator(): Iterator<MenuItem>
}

class MenuTestDrive {
  +{static} main(args: String[]): void
}

class DinerMenuIterator {
  -items: MenuItem
  -position: int = 0
  --
  +DinerMenuIterator(items: MenuItem[])
  +hasNext(): boolean
  +next(): MenuItem
  +remove(): void
}

Waitress *-- Menu
DinerMenu ..|> Menu
DinerMenu *-- MenuItem
PancakeHouseMenu ..|> Menu
PancakeHouseMenu o-- MenuItem
DinerMenuIterator *-- MenuItem
@enduml